tests/paczka1/fuzzy1/17942196.err
Error in line 3: WLj1HWBKgy S823 6,4
Error in line 6: A551 S303 80,2
Error in line 2: 1LkEHrOeqF S303 23,2
Error in line 13: 1LkEHrOeqF A491 76,8
Error in line 20: 2ZTXvgs A551 54,1
Error in line 21: 2ZTXvgs A491 0,1
Error in line 18: WLj1HWBKgy A491 99,1
Error in line 12: BhbaK S823 77,7
Error in line 22: 2ZTXvgs S303 27,7
Error in line 30: 2NUgC72VHd S823 36,0
